views, help views, advanced view auth

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -112,10 +112,20 @@
 
 @layer base {
     * {
-        @apply border-border outline-ring/50;
+        @apply border-border outline-ring/50 select-none;
     }
     html,
     body {
         @apply bg-background text-foreground;
+    }
+
+    img {
+        max-width: 100%;
+        height: auto;
+        vertical-align: middle;
+        font-style: italic;
+        background-repeat: no-repeat;
+        background-size: cover;
+        shape-margin: 1rem;
     }
 }
